# mumble-streamdeck-integration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  actionIDs.cmake  settingIDs.cmake  vcpkg.json
.github/workflows/: build.yml
pluginSkeleton/: manifest.json.in  property_inspector.html.in  property_inspector.js.in
src/: ConnectionManager.cpp  ConnectionManager.h  ESDSDKDefines.h  MumblePlugin.cpp  MumblePlugin.h  StreamDeckPlugin.h  Utils.cpp  Utils.h  main.cpp
